add gitignore file

--- a/rdd_Exercises/exercises.ipynb
+++ b/rdd_Exercises/exercises.ipynb
@@ -9,17 +9,16 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "25/02/27 20:05:05 WARN Utils: Your hostname, edgar-Latitude-5480 resolves to a loopback address: 127.0.1.1; using 192.168.100.63 instead (on interface wlp1s0)\n",
-      "25/02/27 20:05:05 WARN Utils: Set SPARK_LOCAL_IP if you need to bind to another address\n",
+      "25/02/28 10:24:01 WARN Utils: Your hostname, edgar-Latitude-5480 resolves to a loopback address: 127.0.1.1; using 192.168.100.63 instead (on interface wlp1s0)\n",
+      "25/02/28 10:24:01 WARN Utils: Set SPARK_LOCAL_IP if you need to bind to another address\n",
       "Setting default log level to \"WARN\".\n",
       "To adjust logging level use sc.setLogLevel(newLevel). For SparkR, use setLogLevel(newLevel).\n",
-      "25/02/27 20:05:06 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n"
+      "25/02/28 10:24:02 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n"
      ]
     }
    ],
    "source": [
     "from pyspark import SparkContext\n",
-    "\n",
     "sc = SparkContext(\"local\", \"RDD Exercises\")"
    ]
   },
@@ -125,9 +124,59 @@
    "metadata": {},
    "source": [
     "4. Operaciones de agregación\n",
-    "- Crea un RDD a partir de una lista de tuplas, donde cada tuupla contiene una categoría y un valor numérico\n",
+    "- Crea un RDD a partir de una lista de tuplas, donde cada tupla contiene una categoría y un valor numérico\n",
     "- Usa una transformación para agrupar los valores por categoría\n",
     "- Usa una acción para calcular el promedio de los valores por categoría"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "                                                                                \r"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[('A', 250.0), ('B', 250.0), ('C', 550.0), ('D', 750.0)]"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tuple = [\n",
+    "    (\"A\", 100),\n",
+    "    (\"B\", 200),\n",
+    "    (\"B\", 300),\n",
+    "    (\"A\", 400),\n",
+    "    (\"C\", 500),\n",
+    "    (\"C\", 600),\n",
+    "    (\"D\", 700),\n",
+    "    (\"D\", 800),\n",
+    "]\n",
+    "tuple_rdd = sc.parallelize(tuple)\n",
+    "transfor_rdd = tuple_rdd.groupByKey().mapValues(lambda x: sum(x) / len(x))\n",
+    "transfor_rdd.collect()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "5. Operación de Uniony Diferencia\n",
+    "- Crea dos RDD a partir de dos listas de números\n",
+    "- Usa una transformación para unir los dos RDDs\n",
+    "- Usa otra transformación para encotrar la diferenia entre los dos RDDs\n",
+    "- Muestra los resultados"
    ]
   },
   {
